# hackmyvoteros

./: README.md
Analytics/: .dockerignore  .gitignore  README.md  pyproject.toml
Analytics/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
Analytics/myvote_analytics/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py
Analytics/myvote_analytics/db/: base.py  utils.py
Analytics/myvote_analytics/db/dao/: question_dao.py
Analytics/myvote_analytics/db/models/: __init__.py  question_model.py
Analytics/myvote_analytics/services/: __init__.py
Analytics/myvote_analytics/services/clustering/: dependencies.py
Analytics/myvote_analytics/services/emotions/: dependencies.py
Analytics/myvote_analytics/services/sbert_large_mt_ru_retriever/: dependencies.py
Analytics/myvote_analytics/services/spellcheck/: dependencies.py
Analytics/myvote_analytics/tests/: __init__.py
Analytics/myvote_analytics/web/: __init__.py  application.py  lifetime.py
Analytics/myvote_analytics/web/api/: __init__.py  router.py
Analytics/myvote_analytics/web/api/clustering/: __init__.py  schema.py  views.py
Analytics/myvote_analytics/web/api/docs/: __init__.py
Analytics/myvote_analytics/web/api/emotions/: __init__.py  schema.py  views.py
Analytics/myvote_analytics/web/api/monitoring/: __init__.py
Analytics/myvote_analytics/web/api/question/: __init__.py  schema.py  views.py
Analytics/myvote_analytics/web/api/similarity_sentences/: __init__.py  schema.py  views.py
Analytics/myvote_analytics/web/api/spellcheck/: __init__.py  schema.py  views.py
Backend/: HELP.md  README.md  docker-compose.yml  pom.xml
Backend/src/main/java/com/rosatom/myvote/: Application.java
Backend/src/main/java/com/rosatom/myvote/advisor/: ControllerAdvisor.java
Backend/src/main/java/com/rosatom/myvote/config/: SwaggerConfig.java
Backend/src/main/java/com/rosatom/myvote/controller/: AnalyticController.java  AnswerController.java  FileController.java  HelloController.java  LangCheckerController.java  LoadDataController.java  QuestionController.java
Backend/src/main/java/com/rosatom/myvote/repository/: AnswerRepository.java  FileRepository.java  QuestionRepository.java
Backend/src/main/java/com/rosatom/myvote/service/: AnalyticsService.java  AnswerService.java  FileService.java  LoadDataService.java  QuestionService.java
Backend/src/main/resources/: application.yml
Backend/src/main/resources/db/migration/: V1_0_0__hello.sql  V1_0_1__init_tables.sql  V1_0_2__add_file.sql  V1_0_3__change_file.sql  V1_0_4__change_answer.sql  V1_0_5__change_answer.sql  V1_0_6__change_answer.sql  V1_0_7__change_answer.sql
Backend/src/main/resources/dictionary/: exceptions.csv
Frontend/: README.md
(+36 files in other folders)
